<resources>
    <string name="app_name">Top Doctors</string>
    <string name="login">Login</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="register_account">Register \nan account</string>
    <string name="enter_as_a_guest">Enter as a \nguest</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="country">Country</string>
    <string name="address">Address</string>
    <string name="newsletter">Newsletter</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="register_note">Note: All fields with * must be filled</string>
    <string name="email_error">Email is required</string>
    <string name="valid_email_error">Enter valid email address</string>
    <string name="password_error">Password is required</string>
    <string name="first_name_error">First name is required</string>
    <string name="last_name_error">Last name is required</string>
    <string name="confirm_password_error">Confirm password is required</string>
    <string name="password_mismatched_error">Password is mimatched</string>
    <string name="mobile_error">Mobile number is required</string>
    <string name="guest_login">Guest login</string>
    <string name="coming_soon">Coming soon...</string>
    <string name="close">Close</string>
    <string name="please_accept_terms">Please accept our terms and conditions</string>
    <string name="spinner_country">Select Country</string>
    <string name="authenticating">Authenticating...</string>
    <string name="forgot_password_label">Forgot Password</string>
    <string name="submit">Submit</string>
    <string name="back_to_login">Back to login</string>
    <string name="please_wait">Please wait...</string>
    <string name="search_ex">Search(ex. Ahmed, Cardiovascular)</string>
    <string name="search_doctor_label">Doctors</string>
    <string name="search_hospital_label">Hospitals</string>
    <string name="hospital">Hospital</string>
    <string name="search_clinics_label">Clinics</string>
    <string name="clinics">Clinics</string>
    <string name="country_name">Country</string>
    <string name="search_labs_label">Labs</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="claim_profile">Claim Profile</string>
    <string name="add_a_doctor">Add a doctor</string>
    <string name="add_a_hospital">Add a Hospital</string>
    <string name="add_a_clinic">Add a Clinic</string>
    <string name="write_a_review">Write a Review</string>
    <string name="add_a_lab">Add a Lab</string>
    <string name="share">Share</string>
    <string name="bookmark">Bookmark</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="recenty_viewed">Recenty Viewed</string>
    <string name="nearby">Nearby</string>
    <string name="search">Search</string>
    <string name="top_10_doctors">Top 10 Doctors</string>
    <string name="logout">Logout</string>
    <string name="most_visited">Most Visited</string>
    <string name="location">Location</string>
    <string name="speciality">Speciality</string>
    <string name="gender">Gender</string>
    <string name="total_reviews">Reviews</string>
    <string name="enter_valid_password">Enter valid password</string>
    <string name="add_doctor">Add doctor</string>
    <string name="name">Name</string>
    <string name="clinic_name">Clinic Name</string>
    <string name="clinic_address">Clinic Address</string>
    <string name="upload_photo">Upload photo of the syndicate ID *</string>
    <string name="note">Note: </string>
    <string name="all_field_with">All fields with</string>
    <string name="must_be_filled">must be filled.</string>
    <string name="filters">Filters</string>
    <string name="nearby_first">Nearby first</string>
    <string name="no_data_found">No data found</string>
    <string name="clinic_number">Clinic Number</string>
    <string name="are_you">ARE YOU</string>
    <string name="claim_profile_contact_message">Please fill in the following form to be able to contact you</string>
    <string name="map_under_construction">Map Under Construction</string>
    <string name="photo_or_video">Photo or Video</string>
    <string name="get_direction">Get Direction</string>
    <string name="call">Call</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="device_not_connected_to_internet">Make sure your device is connected to the Internet.</string>
    <string name="ok">OK</string>
    <string name="reviews">Reviews</string>
    <string name="reputation">Reputation</string>
    <string name="clinic_accessibility">Clinic\'s Accessibility</string>
    <string name="availability_in_emergencies">Availability in Emergencies</string>
    <string name="approachability">Approachability</string>
    <string name="technology_and_equipment">Technology &amp; Equipment</string>
    <string name="write_your_review">Write Your Review</string>
    <string name="write_review">Write Review</string>
    <string name="choose_an_icon_for_hospital">Choose an icon for the hospital</string>
    <string name="add_clinic">Add Clinic</string>
    <string name="add_lab">Add Lab</string>
    <string name="lab_address">Lab Address</string>
    <string name="doctor">Doctor</string>
    <string name="add_hospital">Add Hospital</string>
    <string name="badges">Badges</string>
    <string name="first_time_reviewer">First Time Reviewer</string>
    <string name="reviewer">Reviewer</string>
    <string name="more_than_10_reviews">More than 10 reviews</string>
    <string name="first_time_share">First Time Share</string>
    <string name="photos">Photos</string>
    <string name="facebook_app_id">1013429645468986</string>
    <string name="social_text">This is my text to send.</string>
    <string name="app_exit_message">Press Back again to Exit.</string>
    <string name="enter_hospital_name">Enter hospital name</string>
    <string name="clinic_name_is_required">Clinic name is required</string>
    <string name="lab_name_is_required">Lab name is required</string>
    <string name="please_upload_syndicate_id">Please upload syndicate ID</string>
    <string name="please_select_location">Please select location</string>
    <string name="please_select_speciality">Please select speciality</string>
    <string name="please_select_doctor">Please select doctor</string>
    <string name="uploading_message">Uploading...</string>
    <string name="please_wait_message">Please wait...</string>
    <string name="reset">Reset</string>
    <string name="reset_search_filter_message">Are you sure reset search filter?</string>
    <string name="cancel">Cancel</string>
    <string name="enter_your_name">Edit Your Name :</string>
    <string name="enter_your_email">Enter Your Email :</string>
    <string name="select_your_location">Select Your Location :</string>
    <string name="enter_your_mobile">Enter Your Mobile :</string>
    <string name="medical_lab">Medical Lab</string>
    <string name="radiology_lab">Radiology Lab</string>
    <string name="choose_icon">Choose Icon</string>
    <string name="share_review">Share Review</string>
    <string-array name="countries_list">
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Australia</item>
        <item>Bangladesh</item>
        <item>Bhutan</item>
        <item>England</item>
        <item>Finland</item>
        <item>India</item>
        <item>Saudi Arabia</item>
        <item>Nepal</item>
    </string-array>

    <string-array name="gender">
        <item>Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="specialities">
        <item>Cardiovascular</item>
        <item>Chest and Allergy</item>
        <item>Dentistry</item>
        <item>Dermatology and Andrology</item>
        <item>ENT</item>
        <item>Gastrointestinal Tract</item>
        <item>General Surgery</item>
        <item>Internal Medicine</item>
        <item>Neurosurgery</item>
        <item>Obesity &amp; Thinness</item>
        <item>Obstetrics &amp; Gynaecology</item>
        <item>Orthopedics</item>
        <item>Orthopedics</item>
        <item>Psychiatry</item>
        <item>Rhumatology</item>
        <item>Urology</item>
        <item>G.P.</item>
        <item>Opthemology</item>
        <item>Endocrinology</item>
        <item>Oncology</item>
        <item>Chronic Diseases</item>
        <item>Plastic Surgery</item>
        <item>Physiotherapy</item>
        <item>Autoimmune Diseases</item>
        <item>Anaesthesia</item>
        <item>Radiology Lab</item>
        <item>Medical Lab</item>
        <item>Hospital</item>
        <item>Center</item>
    </string-array>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_template">TemplateActivity</string>
    <string name="title_activity_maps">Map</string>
</resources>
