<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="searchnative.com.topdoctors.RegisterActivity"
    android:layoutDirection="locale">

    <ScrollView
        android:id="@+id/register_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingStart="@dimen/register_main_padding_start_end"
            android:paddingEnd="@dimen/register_main_padding_start_end"
            android:imeOptions="flagNoExtractUi">

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/toplogo"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:paddingTop="20dp"/>

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:layout_below="@+id/imgLogo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:textColor="#053b61"
                android:textSize="@dimen/register_header_text_size"/>

            <EditText
                android:id="@+id/et_first_name"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:hint="@string/first_name"
                android:textColor="@color/black"
                android:textColorHighlight="@color/textHighlightColor"
                android:backgroundTint="#ffffff"
                android:drawableStart="@mipmap/first_name"
                android:drawableEnd="@mipmap/star"
                android:drawablePadding="8dp"
                android:textColorHint="#bcbbc0"
                android:maxLines="1"
                android:inputType="text"
                android:focusableInTouchMode="true"
                android:textSize="@dimen/input_text_size"/>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#D3D3D3"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="-10dp"/>

            <EditText
                android:id="@+id/et_last_name"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:hint="@string/last_name"
                android:textColor="@color/black"
                android:textColorHighlight="@color/textHighlightColor"
                android:backgroundTint="#ffffff"
                android:drawableStart="@mipmap/last_name"
                android:drawableEnd="@mipmap/star"
                android:drawablePadding="8dp"
                android:textColorHint="#bcbbc0"
                android:maxLines="1"
                android:inputType="text"
                android:textSize="@dimen/input_text_size"/>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#D3D3D3"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="-10dp"/>

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:hint="@string/email"
                android:textColor="@color/black"
                android:textColorHighlight="@color/textHighlightColor"
                android:backgroundTint="#ffffff"
                android:drawableStart="@mipmap/email"
                android:drawableEnd="@mipmap/star"
                android:drawablePadding="8dp"
                android:textColorHint="#bcbbc0"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/input_text_size"/>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#D3D3D3"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="-10dp"/>

            <EditText
                android:id="@+id/et_mobile"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:hint="@string/mobile_number"
                android:textColor="@color/black"
                android:textColorHighlight="@color/textHighlightColor"
                android:backgroundTint="#ffffff"
                android:drawableStart="@mipmap/mobile"
                android:drawableEnd="@mipmap/star"
                android:drawablePadding="8dp"
                android:textColorHint="#bcbbc0"
                android:maxLines="1"
                android:inputType="number"
                android:textSize="@dimen/input_text_size"
                android:maxLength="15"/>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#D3D3D3"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="-10dp"/>

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:hint="@string/password"
                android:textColor="@color/black"
                android:textColorHighlight="@color/textHighlightColor"
                android:backgroundTint="#ffffff"
                android:drawableStart="@mipmap/password"
                android:drawableEnd="@mipmap/star"
                android:inputType="textPassword"
                android:drawablePadding="8dp"
                android:textAlignment="viewStart"
                android:textColorHint="#bcbbc0"
                android:maxLines="1"
                android:textSize="@dimen/input_text_size"/>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#D3D3D3"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="-10dp"/>

            <EditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:hint="@string/confirm_password"
                android:textColor="@color/black"
                android:textColorHighlight="@color/textHighlightColor"
                android:backgroundTint="#ffffff"
                android:drawableStart="@mipmap/password"
                android:drawableEnd="@mipmap/star"
                android:inputType="textPassword"
                android:drawablePadding="8dp"
                android:textAlignment="viewStart"
                android:textColorHint="#bcbbc0"
                android:maxLines="1"
                android:textSize="@dimen/input_text_size"/>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#D3D3D3"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="-10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/country_layout_margin_top"
                android:layout_marginStart="@dimen/country_layout_margin_start">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/country"/>
                    <Spinner
                        android:layout_marginStart="@dimen/country_margin_start"
                        android:layout_marginTop="@dimen/country_margin_top"
                        android:id="@+id/register_country_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:spinnerMode="dialog"
                        android:prompt="@string/country">
                    </Spinner>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:src="@drawable/dropdown_arrow"
                        android:paddingRight="2dp"
                        android:layout_marginTop="@dimen/country_dropdown_arrow_margin_top"/>
                </RelativeLayout>


            </LinearLayout>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#D3D3D3"
                android:layout_marginBottom="@dimen/boder_margin_bottom"
                android:layout_marginTop="@dimen/border_margin_top"
                android:layout_marginStart="@dimen/border_margin_start"/>

            <EditText
                android:id="@+id/et_address"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:hint="@string/address"
                android:textColor="@color/black"
                android:textColorHighlight="@color/textHighlightColor"
                android:backgroundTint="#ffffff"
                android:drawableStart="@mipmap/address"
                android:drawablePadding="8dp"
                android:textColorHint="#bcbbc0"
                android:maxLines="1"
                android:inputType="text"
                android:textSize="@dimen/input_text_size"/>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#D3D3D3"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="-10dp"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:button="@drawable/customdrawablecheckbox"
                android:text="@string/newsletter"
                android:id="@+id/chk_newsletter"
                android:textColor="#bcbbc0"
                android:layout_toStartOf="@+id/imgLogo"
                android:layout_marginTop="10dp"
                android:textSize="@dimen/input_text_size"
                android:layout_marginRight="@dimen/checkbox_margin"
                android:paddingStart="@dimen/checkbox_padding"
                android:layout_marginLeft="@dimen/checkbox_margin"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:button="@drawable/customdrawablecheckbox"
                android:text="@string/terms_and_conditions"
                android:id="@+id/chk_terms_and_condition"
                android:textColor="#bcbbc0"
                android:drawableEnd="@mipmap/star"
                android:layout_toStartOf="@+id/imgLogo"
                android:layout_marginTop="10dp"
                android:textSize="@dimen/input_text_size"
                android:paddingStart="@dimen/checkbox_padding"
                android:layout_marginRight="@dimen/checkbox_margin"
                android:layout_marginLeft="@dimen/checkbox_margin"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="@dimen/register_header_text_size"
                android:id="@+id/btn_register"
                android:background="#008f9e"
                android:textColor="#ffffff"
                android:layout_marginTop="20dp"
                android:layout_marginStart="@dimen/login_facebook_button_margin_start"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_with_facebook"
                android:id="@+id/login_with_facebook"
                android:background="#42609c"
                android:textColor="#ffffff"
                android:drawableLeft="@mipmap/facebook"
                android:padding="10dip"
                android:gravity="center"
                android:textSize="@dimen/forgot_password_with_facebook_text"
                android:layout_marginTop="20dp"
                android:layout_marginStart="@dimen/login_facebook_button_margin_start"
                android:visibility="gone"/>

            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#42609c"
                android:textColor="#ffffff"
                android:drawableLeft="@mipmap/facebook"
                android:drawablePadding="20dp"
                android:layout_marginTop="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/login_with_facebook"
                android:textSize="@dimen/login_with_facebook_text"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/info"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:textSize="18sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="13dp">

                <TextView
                    android:id="@+id/terms_note"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/note"
                    android:textColor="#008f9e"
                    android:textSize="@dimen/term_and_condition_text_size"/>
                <TextView
                    android:id="@+id/terms_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all_field_with"
                    android:textSize="@dimen/term_and_condition_text_size"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/terms_image_height"
                    android:src="@drawable/terms"/>
                <TextView
                    android:id="@+id/terms_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/must_be_filled"
                    android:textSize="@dimen/term_and_condition_text_size"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
