<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="searchnative.com.topdoctors.ForgotPasswordActivity">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:layoutDirection="inherit"
        android:fillViewport="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/forgot_password_layout"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingBottom="20dp"
            android:paddingStart="@dimen/main_layout_padding_start"
            android:paddingEnd="@dimen/main_layout_padding_end"
            android:weightSum="10"
            android:layoutDirection="inherit">

            <ImageView
                android:id="@+id/forgot_imgLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/toplogo"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:paddingTop="25dp"/>

            <TextView
                android:id="@+id/forgot_textViewLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password_label"
                android:textSize="@dimen/forgot_text_size"
                android:textColor="#053b61"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/forgot_et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textColorHighlight="@color/textHighlightColor"
                android:backgroundTint="#ffffff"
                android:hint="@string/email"
                android:layout_alignTop="@+id/emaillogo"
                android:layout_alignParentEnd="false"
                android:layout_toEndOf="@+id/emaillogo"
                android:layout_alignParentStart="false"
                android:drawableStart="@mipmap/email"
                android:drawablePadding="8dp"
                android:inputType="text"
                android:maxLines="1"
                android:textColorHint="#bcbbc0"
                android:focusableInTouchMode="true"
                android:textSize="@dimen/input_text_size"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#D3D3D3"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="-10dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:textSize="@dimen/forgot_text_size"
                android:id="@+id/forgot_btn_submit"
                android:layout_centerHorizontal="true"
                android:background="#008f9e"
                android:textColor="#ffffff"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/back_to_login"
                android:id="@+id/forgot_tv_back_to_login"
                android:layout_centerHorizontal="true"
                android:textColor="#103c61"
                android:textSize="15dp"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
